--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -5,7 +5,7 @@
     "translate-project": "Projects",
     "translated-text": "This is english",
     "translated-hello": "Hello, my name is Thien NGUYEN",
-    "translated-title": "Fullstack Web & Mobile developper",
+    "translated-title": "Fullstack Web & Web Mobile Developper",
     "translated-resume": "Get my resume",
     "translated-passion": "Passionate about Web & Mobile development, I am seeking opportunities to learn and grow in this dynamic field. My contributions to projects such as an interactive quiz and a movie recommendation application have allowed me to master HTML, CSS, JavaScript, React, and REST API.",
     "translated-responsability": "Having held positions of responsibility at Stratech - Metair Lab - SGS France, I have developed skills in planning, strategy, and project management, valuable assets for tackling complex challenges.",
