--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -5,7 +5,7 @@
     "translate-project": "Portfolio",
     "translated-text": "C'est du français",
     "translated-hello": "Salut, moi c'est Thien NGUYEN",
-    "translated-title": "Développeur web & mobile junior",
+    "translated-title": "Développeur Web & Web Mobile",
     "translated-resume": "Voir mon cv",
     "translated-passion": "Passionné de développement Web & Mobile, je recherche des opportunités pour apprendre et progresser dans ce domaine dynamique. Mes contributions à des projets comme un quiz interactif et une application de recommandation de films m'ont permis de maîtriser HTML, CSS, JavaScript, React et REST API.",
     "translated-responsability": "Ayant occupé des postes de responsabilité chez Stratech - Metair Lab - SGS France, j&apos;ai développé des compétences en planification, en stratégie et en gestion de projet, des atouts précieux pour relever des défis complexes.",
